[gd_scene load_steps=13 format=2]

[ext_resource path="res://actors/legs/legs_large_bare_male.tres" type="Texture" id=1]
[ext_resource path="res://actors/features/actor_misc.png" type="Texture" id=2]
[ext_resource path="res://actors/races/race_bases.png" type="Texture" id=3]
[ext_resource path="res://actors/materials/actor_sprites.tres" type="Material" id=4]
[ext_resource path="res://actors/scripts/actor_sprites.gd" type="Script" id=5]
[ext_resource path="res://actors/features/hair/face/minotaur_beard_1.tres" type="Texture" id=6]
[ext_resource path="res://actors/features/hands/hand_large.tres" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 8 )

[sub_resource type="Animation" id=4]
resource_name = "pose"
tracks/0/type = "value"
tracks/0/path = NodePath("legs:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("head_detail:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("head_detail:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("face_detail:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, -19 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("face_detail:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("legs:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("head_detail:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("face_detail:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("legs:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("legs:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("face_hair:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("face_hair:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("hand_right:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6.89458, -9.25465 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("hand_left:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6.89458, -9.25465 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 0.594604, 2.2974, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 0.91 ), Vector2( 0.988, 1.028 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("legs:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hand_left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6.89458, -9.25465 ), Vector2( 6.89458, -8.383 ), Vector2( 6.89458, -9.25465 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hand_right:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6.89458, -9.25465 ), Vector2( -6.89458, -8.383 ), Vector2( -6.89458, -9.25465 ) ]
}

[node name="sprites" type="Sprite"]
material = ExtResource( 4 )
script = ExtResource( 5 )

[node name="hand_left" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 6.89458, -9.25465 )
texture = ExtResource( 7 )

[node name="body" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, -16 )
texture = SubResource( 1 )

[node name="legs" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 3

[node name="head_detail" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, -24 )
texture = SubResource( 2 )

[node name="face_detail" type="Sprite" parent="."]
visible = false
use_parent_material = true
position = Vector2( 2, -19 )
texture = SubResource( 3 )

[node name="face_hair" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, -20 )
texture = ExtResource( 6 )

[node name="head_hair" type="Sprite" parent="."]
visible = false
use_parent_material = true
position = Vector2( 2, -19 )
texture = SubResource( 3 )

[node name="hand_right" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -6.89458, -9.25465 )
texture = ExtResource( 7 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/pose = SubResource( 4 )
anims/run = SubResource( 5 )
